--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,5 @@
 body{
-	background-color:black;
+	background-color:white;
 	color: blue;
 }
 
@@ -21,7 +21,7 @@ element.style {
 .create-update-form {
   padding: 5px;
   margin: 5px;
-  background: red;
+  background: lightblue;
 }
 
 .form-group {
