--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,7 +7,7 @@
 		<title>Eat-da-Burger!</title>
 	</head>
 	<body>
-	<img src="https://aht.seriouseats.com/images/20110131-modernist-cuisine-burger.jpg" alt="some_text" style="width:width;height:height;">
+	<img src="http://clipartpen.com/wp-content/uploads/2017/03/brown-hamburger-clipart-333x259.png" alt="some_text" style="width:width;height:height;">
 		{{{ body }}}
 	</body>
 </html>
